--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
   </section>
 
 
-  <script src="./js/paint-blobs-bg.js" defer></script>
+  <script src="app.js" defer></script>
+
 
 </body>
 </html>
