--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="hero section-inner">
       <div class="hero-content">
 
-        <h1 class="hero-title">cafe Wendy</h1>
+        <h1 class="hero-title">cafe <span class="hero-script">Wendy</span></h1>
+
         <p class="hero-subtitle">Experience the perfect blend of tradition and modern comfort in every cup.</p>
         <a href="#" class="cta-button">Order Now</a>
       </div>
