--- a/index.html
+++ b/index.html
@@ -31,18 +31,28 @@
 
   <!-- HERO -->
   <section class="section">
-    <div class="hero section-inner">
-      <div class="hero-content">
-
-        <h1 class="hero-title">cafe <span class="hero-script">Wendy</span></h1>
-
-        <p class="hero-subtitle">Experience the perfect blend of tradition and modern comfort in every cup.</p>
-        <a href="#" class="cta-button">Order Now</a>
-      </div>
-      
-
+  <div class="hero section-inner">
+    <!-- Decorative hero art (lace-framed PNG) -->
+    <div class="hero-media" aria-hidden="true">
+      <picture>
+        <img
+          class="hero-image"
+          src="assets/img/icedmatcha.png"
+          alt="" 
+          fetchpriority="high"
+          decoding="async"
+        />
+      </picture>
     </div>
-  </section>
+
+    <div class="hero-content">
+      <h1 class="hero-title">cafe <span class="hero-script">Wendy</span></h1>
+      <p class="hero-subtitle">Experience the perfect blend of tradition and modern comfort in every cup.</p>
+      <a href="#" class="cta-button">Order Now</a>
+    </div>
+  </div>
+</section>
+
 
   <!-- MENU -->
   <section class="section">
