--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <picture>
         <img
           class="hero-image"
-          src="assets/img/icedmatcha.png"
+          src="assets/img/lacematcha.png"
           alt="" 
           fetchpriority="high"
           decoding="async"
